# mandelbrot-realtime-zoom

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml
portable_glfw/: CMakeLists.txt
portable_glfw/src/: macos_gestures.mm  main.cpp
windows_dx11/: CMakeLists.txt
windows_dx11/src/: main.cpp  mandelbrot_compute.hlsl
windows_dx11/tools/: compile_hlsl.cpp
